crates/toml_edit/tests/fixtures/invalid/duplicate-keys.stderr
TOML parse error at line 2, column 1
  |
2 | dupe = true
  | ^
Duplicate key `dupe` in document root

